Fixed navbar spacing and underline.

--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -91,12 +91,12 @@
         }
 
         a {
-            // padding: 0px 2px;
-            margin: 0px 3px;
+            padding: 0px 3px;
+            // margin: 0px 3px;
             border-right: 1px solid black;
             text-decoration: none;
             color: black;
-            margin-right: 2px;
+            // margin-right: 2px;
         }
 
         a:last-child {
@@ -249,10 +249,12 @@
             margin-top: 1vh;
     
             a {
-                // padding: 0px 2px;
-                // border-right: 1px solid black;
-                // text-decoration: none;
-                // color: black;
+                padding: 0px 4px;
+                // margin: 0px 3px;
+                border-right: 1px solid black;
+                text-decoration: none;
+                color: black;
+                // margin-right: 2px;
             }
     
             a:last-child {
@@ -355,10 +357,12 @@
             margin-top: 2vh;
     
             a {
-                // padding: 0px 2px;
-                // border-right: 1px solid black;
-                // text-decoration: none;
-                // color: black;
+                padding: 0px 4px;
+                // margin: 0px 3px;
+                border-right: 1px solid black;
+                text-decoration: none;
+                color: black;
+                // margin-right: 2px;
             }
     
             a:last-child {
